add footer desktop style

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
           </div>
         </form>
       </section>
-      <section class="px-12 xl:px-[9.3rem] py-28 xl:py-40">
+      <section class="px-12 xl:px-[9.3rem] py-28 xl:pt-40 xl:pb-32">
         <div class="flex flex-col xl:grid xl:grid-cols-2">
           <div class="flex flex-row">
             <div class="w-[4.15rem] xl:w-[5.4rem] mt-1 mr-7">
@@ -377,39 +377,53 @@
         </div>
       </section>
     </main>
-    <footer
-      class="grid grid-cols-2 px-4 text-white bg-black-200 font-GT-America"
-    >
-      <div class="flex flex-col font-semibold mt-11">
-        <p class="text-[1.51rem]">Abstract</p>
-        <a class="mt-2 text-[1.08rem]" href="#">Start Trial</a>
-        <a class="text-[1.08rem]" href="#">Pricing</a>
-        <a class="text-[1.08rem]" href="#">Download</a>
+    <footer class="grid grid-cols-2 xl:px-24 px-4 bg-black-200">
+      <div
+        class="hidden xl:grid xl:w-[55rem] xl:grid-cols-5 text-white font-GT-America"
+      >
+        <div class="flex flex-col font-semibold xl:font-medium mt-11">
+          <p class="text-[1.51rem] xl:text-2xl xl:font-semibold">Abstract</p>
+          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+            >Start Trial</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Pricing</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Download</a>
+        </div>
+        <div class="flex flex-col mt-11">
+          <p class="text-[1.51rem] xl:text-2xl font-semibold">Resources</p>
+          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+            >Blog</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Help Center</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" text-xl href="#"
+            >Release Notes</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem]" text-xl href="#">Status</a>
+        </div>
+        <div class="flex flex-col mt-11">
+          <p class="text-[1.51rem] xl:text-2xl font-semibold">Community</p>
+          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+            >Twitter</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">LinkedIn</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Facebook</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Dribble</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Podcast</a>
+        </div>
+        <div class="flex flex-col mt-11">
+          <p class="text-[1.51rem] xl:text-2xl font-semibold">Company</p>
+          <a
+            class="text-[1.08rem] mt-2 xl:mt-4 hr-[1.08rem] xl:text-[.97rem]"
+            href="#"
+            >About Us</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Careers</a>
+          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Legal</a>
+          <p class="mt-7 text-[1.1rem] xl:text-base font-bold">Contact Us</p>
+          <a class="text-[1.08rem] xl:text-sm" href="#">info@abstract.com</a>
+        </div>
       </div>
-      <div class="flex flex-col mt-11">
-        <p class="text-[1.51rem] font-semibold">Resources</p>
-        <a class="mt-2 text-[1.08rem]" href="#">Blog</a>
-        <a class="text-[1.08rem]" href="#">Help Center</a>
-        <a class="text-[1.08rem]" text-xl href="#">Release Notes</a>
-        <a class="text-[1.08rem]" text-xl href="#">Status</a>
-      </div>
-      <div class="flex flex-col mt-11">
-        <p class="text-[1.51rem] font-semibold">Community</p>
-        <a class="mt-2 text-[1.08rem]" href="#">Twitter</a>
-        <a class="text-[1.08rem]" href="#">LinkedIn</a>
-        <a class="text-[1.08rem]" href="#">Facebook</a>
-        <a class="text-[1.08rem]" href="#">Dribble</a>
-        <a class="text-[1.08rem]" href="#">Podcast</a>
-      </div>
-      <div class="flex flex-col mt-11">
-        <p class="text-[1.51rem] font-semibold">Company</p>
-        <a class="mt-2 text-[1.08rem]" href="#">Careers</a>
-        <a class="text-[1.08rem] hr-[1.08rem]" href="#">About Us</a>
-        <a class="text-[1.08rem]" href="#">Legal</a>
-        <p class="mt-7 text-[1.1rem] font-bold">Contact Us</p>
-        <a class="text-[1.08rem]" href="#">info@abstract.com</a>
-      </div>
-      <div class="w-64 mt-10">
+      <div class="w-64 mt-10 xl:mt-48 xl:ml-[20.4rem] text-white">
         <div class="w-9 h-9">
           <svg
             viewBox="0 0 18 18"
@@ -426,7 +440,7 @@
             />
           </svg>
         </div>
-        <p class="mt-5 text-xl">
+        <p class="mt-5 xl:mt-4 xl:mb-16 text-xl xl:font-medium">
           © Copyright 2024<br />
           Abstract Studio Design, Inc.<br />
           All rights reserved
