Add github pages site

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../src/favicon.ico" type="image/x-icon" />
     <link href="/public/output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
@@ -199,7 +199,7 @@
         <div class="flex flex-col xl:grid xl:grid-cols-2">
           <div class="flex flex-row">
             <div class="w-[4.15rem] xl:w-[5.4rem] mt-1 mr-7">
-              <img src="/public/assets/icon-versions.png" alt="" />
+              <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-[25rem]">
               <p
@@ -217,11 +217,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -229,7 +226,7 @@
           </div>
           <div class="flex xl:mt-0 flex-row mt-[5.7rem]">
             <div class="w-[4.15rem] mt-1 mr-7 xl:w-[5.4rem]">
-              <img src="/public/assets/icon-account.png" alt="" />
+              <img src="./assets/icon-account.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[24rem] text-black">
               <p
@@ -247,11 +244,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -259,7 +253,7 @@
           </div>
           <div class="flex flex-row mt-[5.7rem]">
             <div class="w-[4.15rem] mt-1 mr-7 xl:w-[5.4rem]">
-              <img src="/public/assets/icon-organizations.png" alt="" />
+              <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[25rem] text-black">
               <p
@@ -277,11 +271,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -306,11 +297,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -335,11 +323,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.64rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -364,11 +349,8 @@
                 <a href="#">Learn More</a>
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.64rem] xl:ml-2"
-                  src="/public/assets/arrow-1.jpg"
-                  srcset="
-                    /public/assets/arrow-1.jpg,
-                    /public/assets/arrow-2.jpg 2x
-                  "
+                  src="./assets/arrow-1.jpg"
+                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
