--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../src/favicon.ico" type="image/x-icon" />
-    <link href="/public/output.css" rel="stylesheet" />
+    <link href="./output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
   <body class="h-screen debug-screens">
@@ -272,7 +272,7 @@
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
                   src="./assets/arrow-1.jpg"
-                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -280,7 +280,7 @@
           </div>
           <div class="flex flex-row mt-[5.7rem] xl:w-[30rem]">
             <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
-              <img src="/public/assets/icon-billing.png" alt="" />
+              <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[23rem] text-black">
               <p
@@ -298,7 +298,7 @@
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.65rem] xl:ml-2"
                   src="./assets/arrow-1.jpg"
-                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -306,7 +306,7 @@
           </div>
           <div class="flex flex-row mt-[5.7rem] xl:w-[30rem]">
             <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
-              <img src="/public/assets/icon-authenticate.png" alt="" />
+              <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-96">
               <p
@@ -324,7 +324,7 @@
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.64rem] xl:ml-2"
                   src="./assets/arrow-1.jpg"
-                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
@@ -332,7 +332,7 @@
           </div>
           <div class="flex flex-row mt-24 xl:w-[30rem]">
             <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
-              <img src="/public/assets/icon-comment.png" alt="" />
+              <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-96">
               <p
@@ -350,7 +350,7 @@
                 <img
                   class="mt-[.2rem] ml-3 h-6 xl:h-2 xl:mt-[.64rem] xl:ml-2"
                   src="./assets/arrow-1.jpg"
-                  srcset="./assets/arrow-1.jpg, /public/assets/arrow-2.jpg 2x"
+                  srcset="./assets/arrow-1.jpg, ./assets/arrow-2.jpg 2x"
                   alt=""
                 />
               </div>
