Add nav tablet styles

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
   </head>
   <body class="h-screen debug-screens">
     <header class="text-white font-GT-America">
-      <nav class="flex w-full py-5 bg-black-200 xl:py-[1.18rem] xl:px-20">
+      <nav
+        class="flex w-full py-5 bg-black-200 xl:py-[1.18rem] lg:py-5 xl:px-20 lg:px-[3.8rem]"
+      >
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-[.85rem]" href="https://www.abstract.com/">
@@ -73,16 +75,18 @@
           <li class="flex items-center">
             <span class="text-[2rem] ml-[.47rem] mr-[.55rem] font-thin">|</span>
             <a
-              class="mt-[.35rem] xl:mt-[.3rem] text-[1.45rem] font-medium"
+              class="mt-[.35rem] xl:mt-[.3rem] lg:mr-[27.45rem] text-[1.45rem] font-medium"
               href="./index.html"
               >Help Center</a
             >
           </li>
         </ul>
-        <div class="mt-[.65rem] xl:hidden ml-[5.5rem] mr-[.5rem] w-8 h-8">
+        <div
+          class="mt-[.65rem] lg:mt-3 xl:hidden ml-[5.5rem] lg:mr-1 lg:ml-[6.25rem] mr-[.5rem] w-8 h-8"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 26 26"
+            viewBox="0 0 30 30"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
@@ -107,11 +111,11 @@
             ></line>
           </svg>
         </div>
-        <div class="w-9 h-9">
+        <div class="w-7 h-7 lg:mt-[.15rem]">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="mt-[.4rem] xl:hidden"
-            viewBox="0 0 22 22"
+            class="mt-[.4rem] md:mt-2 xl:hidden"
+            viewBox="0 0 23 23"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
@@ -159,10 +163,10 @@
     </header>
     <main class="font-GT-America">
       <section
-        class="flex flex-col items-center justify-center px-[.85rem] xl:px-[19.7rem] xl:pt-[7.75rem] xl:pb-[7.3rem] pb-[8rem] pt-20 bg-blue-100"
+        class="flex flex-col items-center justify-center px-[.85rem] xl:px-[19.7rem] lg:px-40 xl:pt-[7.75rem] xl:pb-[7.3rem] pb-[8rem] pt-20 bg-blue-100"
       >
         <h1
-          class="tracking-[-.25rem] xl:tracking-[-.15rem] xl:text-[4.8rem] text-[2.5rem] font-medium leading-10"
+          class="tracking-[-.25rem] xl:tracking-[-.15rem] xl:text-[4.8rem] lg:text-[5rem] text-[2.5rem] font-medium leading-10"
         >
           How can we help?
         </h1>
