Add main section tablet styles

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link href="./output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
-  <body class="h-screen debug-screens">
-    <header class="text-white font-GT-America">
+  <body class="h-screen debug-screens font-GT-America">
+    <header class="text-white">
       <nav
         class="flex w-full py-5 bg-black-200 xl:py-[1.18rem] lg:py-5 xl:px-20 lg:px-[3.8rem]"
       >
@@ -161,12 +161,12 @@
         </div>
       </nav>
     </header>
-    <main class="font-GT-America">
+    <main>
       <section
-        class="flex flex-col items-center justify-center px-[.85rem] xl:px-[19.7rem] lg:px-40 xl:pt-[7.75rem] xl:pb-[7.3rem] pb-[8rem] pt-20 bg-blue-100"
+        class="flex flex-col items-center justify-center px-[.85rem] xl:px-[19.7rem] lg:px-[9.5rem] xl:pt-[7.75rem] lg:pt-[7.8rem] xl:pb-[7.3rem] pb-[8rem] pt-20 bg-blue-100"
       >
         <h1
-          class="tracking-[-.25rem] xl:tracking-[-.15rem] xl:text-[4.8rem] lg:text-[5rem] text-[2.5rem] font-medium leading-10"
+          class="tracking-[-.25rem] xl:tracking-[-.15rem] xl:text-[4.8rem] lg:text-[4.8rem] text-[2.5rem] font-medium lg:tracking-tight trac leading-10"
         >
           How can we help?
         </h1>
@@ -199,10 +199,14 @@
           </div>
         </form>
       </section>
-      <section class="px-12 xl:px-[9.3rem] py-28 xl:pt-40 xl:pb-32">
-        <div class="flex flex-col xl:grid xl:grid-cols-2">
+      <section
+        class="px-12 xl:px-[9.3rem] lg:px-28 lg:py-40 py-28 xl:pt-40 xl:pb-32"
+      >
+        <div
+          class="flex flex-col xl:grid xl:grid-cols-2 lg:grid lg:grid-cols-2"
+        >
           <div class="flex flex-row">
-            <div class="w-[4.15rem] xl:w-[5.4rem] mt-1 mr-7">
+            <div class="w-[4.15rem] xl:w-[5.4rem] lg:w-[4.7rem] mt-1 mr-7">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-[25rem]">
@@ -216,7 +220,7 @@
                 one place.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold lg:font-normal lg:text-xl xl:text-[1.2rem] xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -228,8 +232,8 @@
               </div>
             </div>
           </div>
-          <div class="flex xl:mt-0 flex-row mt-[5.7rem]">
-            <div class="w-[4.15rem] mt-1 mr-7 xl:w-[5.4rem]">
+          <div class="flex xl:mt-0 flex-row mt-[5.7rem] lg:mt-0">
+            <div class="w-[4.15rem] mt-1 mr-7 xl:w-[5.4rem] lg:w-[4.7rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[24rem] text-black">
@@ -243,7 +247,7 @@
                 details, and password.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] lg:font-normal lg:text-xl xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -256,7 +260,7 @@
             </div>
           </div>
           <div class="flex flex-row mt-[5.7rem]">
-            <div class="w-[4.15rem] mt-1 mr-7 xl:w-[5.4rem]">
+            <div class="w-[4.15rem] lg:w-[4.7rem] mt-1 mr-7 xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[25rem] text-black">
@@ -270,7 +274,7 @@
                 people and your work.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] lg:text-xl lg:font-normal xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -283,7 +287,7 @@
             </div>
           </div>
           <div class="flex flex-row mt-[5.7rem] xl:w-[30rem]">
-            <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
+            <div class="w-[4.3rem] mt-1 mr-7 lg:w-[4.7rem] xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div class="flex flex-col w-64 xl:w-[23rem] text-black">
@@ -296,7 +300,7 @@
                 Change subscriptions and payment details.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold lg:text-xl xl:text-[1.2rem] lg:font-normal xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -309,7 +313,7 @@
             </div>
           </div>
           <div class="flex flex-row mt-[5.7rem] xl:w-[30rem]">
-            <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
+            <div class="w-[4.3rem] lg:w-[4.7rem] mt-1 mr-7 xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-96">
@@ -322,7 +326,7 @@
                 Set up an configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold lg:text-xl xl:text-[1.2rem] lg:font-normal xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
@@ -335,7 +339,7 @@
             </div>
           </div>
           <div class="flex flex-row mt-24 xl:w-[30rem]">
-            <div class="w-[4.3rem] mt-1 mr-7 xl:w-[5.4rem]">
+            <div class="w-[4.3rem] mt-1 mr-7 lg:w-[4.7rem] xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black xl:w-96">
@@ -348,7 +352,7 @@
                 Get in touch with a human.
               </p>
               <div
-                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold xl:text-[1.2rem] xl:font-medium text-blue-200"
+                class="flex-row mt-[1.2rem] text-[1.28rem] flex font-semibold lg:text-xl xl:text-[1.2rem] lg:font-normal xl:font-medium text-blue-200"
               >
                 <a href="#">Learn More</a>
                 <img
